feat(backend): move some static fields out of job tables
This commit move `raw_*` fields from the `queue` and `completed_job` table
to a new `job_definition` table. For backward compatibility, they are left
unchanged in the original tables, hence all parameters fetch use `coalesce`
or a fallback to the original table. As such, all previously pushed jobs
(before migration) will work as intended.

--- a/backend/windmill-queue/Cargo.toml
+++ b/backend/windmill-queue/Cargo.toml
@@ -36,6 +36,7 @@ prometheus = { workspace = true, optional = true }
 cron.workspace = true
 rsmq_async.workspace = true
 tokio.workspace = true
+futures.workspace = true
 futures-core.workspace = true
 itertools.workspace = true
 async-recursion.workspace = true
