add `bigrawscript` and `bigscriptinflow` to the bench suite

--- a/benchmarks/suite_config.json
+++ b/benchmarks/suite_config.json
@@ -30,5 +30,13 @@
   {
     "kind": "nativets",
     "jobs": 2000
+  },
+  {
+    "kind": "bigrawscript",
+    "jobs": 10000
+  },
+  {
+    "kind": "bigscriptinflow",
+    "jobs": 10000
   }
 ]
