--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -267,6 +267,8 @@ tokio-native-tls = "^0"
 openssl = "=0.10"
 mail-parser = "^0"
 matchit = "=0.7.3"
+
+# requires librdkafka v2.3.0
 rdkafka = { version = "0.36.2", features = ["dynamic-linking"] }
 
 datafusion = "39.0.0"
