--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://postgres:changeme@db/windmill?sslmode=disable
+DATABASE_URL=postgres://postgres:changeme@db/windmill_new?sslmode=disable
 
 # For Enterprise Edition, use:
 # WM_IMAGE=ghcr.io/windmill-labs/windmill-ee:main
