--- a/backend/windmill-common/Cargo.toml
+++ b/backend/windmill-common/Cargo.toml
@@ -60,6 +60,7 @@ crc.workspace = true
 windmill-macros.workspace = true
 semver.workspace = true
 croner = "2.0.6"
+chrono-tz = "0.10.0"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemalloc-ctl = { optional = true, workspace = true }
