--- a/frontend/package.json
+++ b/frontend/package.json
@@ -129,6 +129,7 @@
 		"openai": "^4.57.2",
 		"p-limit": "^6.1.0",
 		"pdfjs-dist": "4.8.69",
+		"panzoom": "^9.4.3",
 		"quill": "^1.3.7",
 		"rfc4648": "^1.5.3",
 		"svelte-carousel": "^1.0.25",
