--- a/frontend/package.json
+++ b/frontend/package.json
@@ -128,7 +128,7 @@
 		"ol": "^7.4.0",
 		"openai": "^4.57.2",
 		"p-limit": "^6.1.0",
-		"pdfjs-dist": "^3.8.162",
+		"pdfjs-dist": "4.8.69",
 		"quill": "^1.3.7",
 		"rfc4648": "^1.5.3",
 		"svelte-carousel": "^1.0.25",
