--- a/backend/windmill-common/Cargo.toml
+++ b/backend/windmill-common/Cargo.toml
@@ -26,6 +26,7 @@ anyhow.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 chrono.workspace = true
+chrono-tz.workspace = true
 hex.workspace = true
 rand.workspace = true
 sqlx = { workspace = true, features = ["postgres"] }
@@ -60,7 +61,6 @@ crc.workspace = true
 windmill-macros.workspace = true
 semver.workspace = true
 croner = "2.0.6"
-chrono-tz = "0.10.0"
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemalloc-ctl = { optional = true, workspace = true }
