Add settings page + common code for indexer

--- a/backend/windmill-indexer/Cargo.toml
+++ b/backend/windmill-indexer/Cargo.toml
@@ -30,3 +30,4 @@ bytes.workspace = true
 object_store = { workspace = true, optional = true}
 tokio-tar.workspace = true
 lazy_static.workspace = true
+const_format.workspace = true
