--- a/backend/windmill-queue/Cargo.toml
+++ b/backend/windmill-queue/Cargo.toml
@@ -37,6 +37,7 @@ cron.workspace = true
 rsmq_async.workspace = true
 tokio.workspace = true
 futures-core.workspace = true
+futures.workspace = true
 itertools.workspace = true
 async-recursion.workspace = true
 bigdecimal.workspace = true
