fix: retry on pushing next scheduled job of schedule

--- a/backend/windmill-queue/Cargo.toml
+++ b/backend/windmill-queue/Cargo.toml
@@ -44,3 +44,4 @@ bigdecimal.workspace = true
 axum.workspace = true
 serde_urlencoded.workspace = true
 regex.workspace = true
+backon.workspace = true
