--- a/backend/windmill-worker/Cargo.toml
+++ b/backend/windmill-worker/Cargo.toml
@@ -90,7 +90,7 @@ object_store = { workspace = true, optional = true}
 convert_case.workspace = true
 yaml-rust.workspace = true
 swc_ecma_parser.workspace = true
-
+backon.workspace = true
 
 [build-dependencies]
 deno_fetch = { workspace = true, optional = true }
