--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,6 +50,7 @@ services:
         limits:
           cpus: "1"
           memory: 2048M
+          # for GB, use syntax '2Gi'
     restart: unless-stopped
     environment:
       - DATABASE_URL=${DATABASE_URL}
@@ -76,6 +77,7 @@ services:
         limits:
           cpus: "1"
           memory: 2048M
+          # for GB, use syntax '2Gi'
     restart: unless-stopped
     environment:
       - DATABASE_URL=${DATABASE_URL}
@@ -98,6 +100,7 @@ services:
   #       limits:
   #         cpus: "1"
   #         memory: 2048M
+  #         # for GB, use syntax '2Gi'
   #   restart: unless-stopped
   #   environment:
   #     - DATABASE_URL=${DATABASE_URL}
