--- a/backend/windmill-common/Cargo.toml
+++ b/backend/windmill-common/Cargo.toml
@@ -61,6 +61,8 @@ crc.workspace = true
 windmill-macros.workspace = true
 semver.workspace = true
 croner = "2.0.6"
+quick_cache.workspace = true
+bitcode.workspace = true
 
 [target.'cfg(not(target_env = "msvc"))'.dependencies]
 tikv-jemalloc-ctl = { optional = true, workspace = true }
