fix: global timeout not set correctly on load

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -255,6 +255,11 @@
 			"svelte": "./package/components/FlowBuilder.svelte",
 			"default": "./package/components/FlowBuilder.svelte"
 		},
+		"./components/AppEditor.svelte": {
+			"types": "./package/components/app/editor/AppEditor.svelte.d.ts",
+			"svelte": "./package/components/app/editor/AppEditor.svelte",
+			"default": "./package/components/app/editor/AppEditor.svelte"
+		},
 		"./components/ScriptBuilder.svelte": {
 			"types": "./package/components/ScriptBuilder.svelte.d.ts",
 			"svelte": "./package/components/ScriptBuilder.svelte",
@@ -431,6 +436,9 @@
 			],
 			"components/FlowBuilder.svelte": [
 				"./package/components/FlowBuilder.svelte.d.ts"
+			],
+			"components/AppEditor.svelte": [
+				"./package/components/app/editor/AppEditor.svelte.d.ts"
 			],
 			"components/ScriptBuilder.svelte": [
 				"./package/components/ScriptBuilder.svelte.d.ts"
