feat: :construction: fix query with sqlx, added main loop

--- a/backend/windmill-api/Cargo.toml
+++ b/backend/windmill-api/Cargo.toml
@@ -102,3 +102,4 @@ http.workspace = true
 async-stream.workspace = true
 ulid.workspace = true
 pg_escape.workspace = true
+byteorder.workspace = true
