--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -279,6 +279,7 @@ crc = "^3"
 tar = "^0"
 http = "^1"
 async-stream = "^0"
+byteorder = "1.5.0"
 
 tikv-jemallocator = { version = "0.5" }
 tikv-jemalloc-sys  = { version = "^0.5" }
