--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -283,6 +283,8 @@ tracing-opentelemetry = "0.28.0"
 opentelemetry-stdout = { version = "0.27.0", features = ["trace"] }
 opentelemetry_sdk = { version = "*", features = ["rt-tokio"] }
 opentelemetry-otlp = "0.27.0"
+opentelemetry-appender-tracing = "0.27.0"
+
 opentelemetry-semantic-conventions = "*"
 
 tikv-jemallocator = { version = "0.5" }
