--- a/backend/windmill-worker/Cargo.toml
+++ b/backend/windmill-worker/Cargo.toml
@@ -28,6 +28,7 @@ windmill-parser.workspace = true
 windmill-parser-ts.workspace = true
 windmill-parser-go.workspace = true
 windmill-parser-rust.workspace = true
+windmill-parser-csharp.workspace = true
 windmill-parser-py.workspace = true
 windmill-parser-yaml.workspace = true
 windmill-parser-py-imports.workspace = true
