--- a/backend/windmill-worker/Cargo.toml
+++ b/backend/windmill-worker/Cargo.toml
@@ -19,6 +19,7 @@ flow_testing = []
 cloud = []
 sqlx = []
 deno_core = ["dep:deno_fetch", "dep:deno_webidl", "dep:deno_web", "dep:deno_net", "dep:deno_console", "dep:deno_url", "dep:deno_core", "dep:deno_ast", "dep:deno_tls"]
+otel = ["windmill-common/otel", "dep:opentelemetry"]
 
 [dependencies]
 windmill-queue.workspace = true
@@ -91,6 +92,9 @@ convert_case.workspace = true
 yaml-rust.workspace = true
 swc_ecma_parser.workspace = true
 backon.workspace = true
+
+opentelemetry = { workspace = true, optional = true }
+
 
 [build-dependencies]
 deno_fetch = { workspace = true, optional = true }
