--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -282,7 +282,7 @@ async-stream = "^0"
 opentelemetry = "0.27.0"
 tracing-opentelemetry = "0.28.0"
 opentelemetry_sdk = { version = "*", features = ["rt-tokio"] }
-opentelemetry-otlp = "0.27.0"
+opentelemetry-otlp = { version = "0.27.0", features = ["grpc-tonic", "tls"] }
 opentelemetry-appender-tracing = "0.27.0"
 opentelemetry-semantic-conventions = "*"
 
