--- a/backend/windmill-worker/Cargo.toml
+++ b/backend/windmill-worker/Cargo.toml
@@ -18,8 +18,10 @@ parquet = ["windmill-common/parquet", "dep:object_store"]
 flow_testing = []
 cloud = []
 sqlx = []
-deno_core = ["dep:deno_fetch", "dep:deno_webidl", "dep:deno_web", "dep:deno_net", "dep:deno_console", "dep:deno_url", "dep:deno_core", "dep:deno_ast", "dep:deno_tls"]
+deno_core = ["dep:deno_fetch", "dep:deno_webidl", "dep:deno_web", "dep:deno_net", "dep:deno_console", "dep:deno_url", "dep:deno_core",
+    "dep:deno_ast", "dep:deno_tls", "dep:deno_permissions", "dep:deno_telemetry", "dep:deno_runtime"]
 otel = ["windmill-common/otel", "dep:opentelemetry"]
+dind = ["dep:bollard"]
 
 [dependencies]
 windmill-queue.workspace = true
@@ -94,7 +96,7 @@ swc_ecma_parser.workspace = true
 backon.workspace = true
 
 opentelemetry = { workspace = true, optional = true }
-
+bollard = { workspace = true, optional = true }
 
 [build-dependencies]
 deno_fetch = { workspace = true, optional = true }
@@ -106,4 +108,8 @@ deno_url = { workspace = true, optional = true }
 deno_core = { workspace = true, optional = true }
 deno_ast = { workspace = true, optional = true }
 deno_tls = { workspace = true, optional = true }
+deno_telemetry = { workspace = true, optional = true }
+deno_permissions = { workspace = true, optional = true }
+deno_runtime = { workspace = true, optional = true }
+
 zstd.workspace = true
