--- a/backend/windmill-worker/Cargo.toml
+++ b/backend/windmill-worker/Cargo.toml
@@ -19,7 +19,7 @@ flow_testing = []
 cloud = []
 sqlx = []
 deno_core = ["dep:deno_fetch", "dep:deno_webidl", "dep:deno_web", "dep:deno_net", "dep:deno_console", "dep:deno_url", "dep:deno_core",
-    "dep:deno_ast", "dep:deno_tls", "dep:deno_permissions", "dep:deno_telemetry", "dep:deno_runtime"]
+    "dep:deno_ast", "dep:deno_tls", "dep:deno_permissions"]
 otel = ["windmill-common/otel", "dep:opentelemetry"]
 dind = ["dep:bollard"]
 
@@ -71,6 +71,8 @@ deno_url = { workspace = true, optional = true }
 deno_core = { workspace = true, optional = true }
 deno_ast = { workspace = true, optional = true }
 deno_tls = { workspace = true, optional = true }
+deno_permissions = { workspace = true, optional = true }
+
 postgres-native-tls.workspace = true
 native-tls.workspace = true
 mysql_async.workspace = true
@@ -108,8 +110,6 @@ deno_url = { workspace = true, optional = true }
 deno_core = { workspace = true, optional = true }
 deno_ast = { workspace = true, optional = true }
 deno_tls = { workspace = true, optional = true }
-deno_telemetry = { workspace = true, optional = true }
 deno_permissions = { workspace = true, optional = true }
-deno_runtime = { workspace = true, optional = true }
 
 zstd.workspace = true
